[project]
name = "mcp-server-litellm"
version = "0.6.1"
description = "A Model Context Protocol server providing tools for LiteLLM integration and model management"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anthropic, PBC." }]
keywords = ["litellm", "llm", "mcp", "ai", "completion"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.1.0",
    "litellm>=1.54.0",
    "pydantic>=2.10.3",
]

[project.scripts]
mcp-server-litellm = "mcp_server_litellm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.8.1"]